--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -685,6 +685,27 @@
                                             }
                                         </ul>
                                     </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="metismenu-icon fa fa-flag-checkered"></i>
+                                            Issue Track
+                                            <i class="metismenu-state-icon fa fa-caret-down caret-left"></i>
+                                        </a>
+                                        <ul>
+                                            <li>
+                                                <a href="@Url.Action("Index", "IssueTrack")">
+                                                    <i class="metismenu-icon pe-7s-diamond"></i>
+                                                    Issue Track Report
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="@Url.Action("Create", "IssueTrack")">
+                                                    <i class="metismenu-icon pe-7s-diamond"></i>
+                                                    Issue Create
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </li>
 
 
                                     @*Link*@
