--- a/ProAcc/Views/ProjectCreation/_PMTaskCreate.cshtml
+++ b/ProAcc/Views/ProjectCreation/_PMTaskCreate.cshtml
@@ -71,6 +71,16 @@
             }
             ValidateData();
         });
+
+        $("#txtTaskName").bind('paste', function () {
+            var self = $(this);
+            var orig = self.val();
+            setTimeout(function () {
+               
+                ValidateData();
+            });
+        });
+       
     });
     $('#drpTaskCat').change(function () {
         ValidateData();
