--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -693,17 +693,18 @@
                                         </a>
                                         <ul>
                                             <li>
-                                                <a href="@Url.Action("Index", "IssueTrack")">
+                                                <a href="@Url.Action("Create", "IssueTrack")">
                                                     <i class="metismenu-icon pe-7s-diamond"></i>
-                                                    Issue Track Report
+                                                    Create
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="@Url.Action("Create", "IssueTrack")">
+                                                <a href="@Url.Action("Index", "IssueTrack")">
                                                     <i class="metismenu-icon pe-7s-diamond"></i>
-                                                    Issue Create
+                                                    Update
                                                 </a>
                                             </li>
+
                                         </ul>
                                     </li>
 
