--- a/ProAcc/Views/IssueTrack/Index.cshtml
+++ b/ProAcc/Views/IssueTrack/Index.cshtml
@@ -127,7 +127,7 @@
                 { label: 'Issuetrack_Id', name: 'Issuetrack_Id', index: 'Issuetrack_Id', width: 100,hidden:true,align: "center",},
                 
                 {
-                    label: 'Phase', name: 'Phase', index: 'Phase', width: 100, editable: false,align: "center",hidden:true
+                    label: 'Phase', name: 'Phase', index: 'Phase', width: 100, editable: false, align: "center", hidden: false
                 },
                 { label: 'Task', name: 'Task', index: 'Task', width: 100, editable: false ,align: "center"},
                 {
