--- a/ProAcc/Views/Customers/Create.cshtml
+++ b/ProAcc/Views/Customers/Create.cshtml
@@ -281,6 +281,7 @@
         input.addEventListener('countrychange', function () {
             countryCode = intl.getSelectedCountryData().iso2;
             $("#selectedCountry").val(countryCode);
+            $("#txtCustomerPhone").val("");
         })
 
     // Validate on blur event
