--- a/ProAcc/Views/IssueTrack/Index.cshtml
+++ b/ProAcc/Views/IssueTrack/Index.cshtml
@@ -137,7 +137,7 @@
                         value: GetInstanceDropDown()
                     }
                 },
-                { label: 'IssueName', name: 'IssueName', index: 'IssueName', width: 150, editable: false ,align: "center",classes: 'wrapColumnText'},
+                { label: 'Issue Name', name: 'IssueName', index: 'IssueName', width: 150, editable: false ,align: "center",classes: 'wrapColumnText'},
                 {
                     label: 'Status', name: 'Status', index: 'Status', width: 150, editable: true, edittype: "select",classes: 'wrapColumnText',
                     editoptions: {
@@ -157,7 +157,7 @@
                     }
 
                 },                
-                { label: 'Comment', name: 'Comments', index: 'Comments', width: 150, editable: false,classes: 'wrapColumnText' },
+                { label: 'Comment', name: 'Comments', index: 'Comments', width: 170, editable: false,classes: 'wrapColumnText' },
                 {
                     label: 'New Comments', name: 'cmt', index: ' ', width: 150, editable: true, hidden: false,
                 },
@@ -203,7 +203,7 @@
             sortname: 'Name',
             sortorder: "asc",
             grouping: false,
-            caption: "Isuue Report",
+            caption: "Issue Report",
             
             //onSelectRow: editRow
             serializeRowData: function (postdata) {
